# django-generic-backend

./: README.md  docker-compose.yaml  pyproject.toml
core/: urls.py  views.py
core/migrations/: 0001_initial.py
project/: settings.py  urls.py
