[tool.poetry]
name = "django-generic-backend"
version = "0.1.0"
description = "Modelo genérico de backend com django, para criar aplicações desacopladas, envolvendo tecnologias que gosto de usar"
authors = ["Ronald Seabra <git.ronaldseabra@gmail.com>"]
readme = "README.md"
packages = [{include = "django_generic_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
pydantic = "^2.4.2"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.2.0"
python-decouple = "^3.8"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
